# esp32-flare-detection

./: .gitignore  CMakeLists.txt  README.md  bağlantıl-şemasi.md  sdkconfig  sdkconfig.defaults
dashboard/: README.md  index.html
dashboard/css/: dashboard.css
dashboard/js/: app.js  charts.js  config.js  connection.js  i18n.js  mock.js  notifications.js
main/: CMakeLists.txt  main.c  secrets.example.h
report/: rapor.tex
